--- a/src/client/scss/components/_watch.scss
+++ b/src/client/scss/components/_watch.scss
@@ -4,45 +4,6 @@ article.watch {
 }
 
 section.watch-video {
-    div.watch-video-player {
-        position: relative;
-        video {
-            width: 100%;
-            display: block;
-        }
-        div.watch-video-controller {
-            position: absolute;
-            width: 100%;
-            padding: 0 12px;
-            transform: translateY(-100%);
-            overflow: hidden;
-            opacity: 0;
-            transition: opacity 250ms ease-in-out;
-            background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
-            .time-line {
-                width: 100%;
-            }
-            button {
-                padding: 12px;
-            }
-            input {
-                height: 5px;
-                background-color: $gray;
-                &:hover {
-                    padding: 0.5px 0;
-                }
-            }
-            div.controller-container {
-                @include flex(space-between);
-            }
-            div.controller-left {
-                @include flex();
-            }
-        }
-        div.watch-video-controller.showing {
-            opacity: 1;
-        }
-    }
     header.watch-video-data {
         padding: 20px 0 8px 0;
         border-bottom: 1px solid $border;
@@ -106,5 +67,44 @@ section.watch-channel {
     }
     div.channel-video-description {
         margin-left: 64px;
+    }
+}
+
+div.video-player {
+    position: relative;
+    video {
+        width: 100%;
+        display: block;
+    }
+    div.video-controller {
+        position: absolute;
+        width: 100%;
+        padding: 0 12px;
+        transform: translateY(-98%);
+        overflow: hidden;
+        opacity: 0;
+        transition: opacity 250ms ease-in-out;
+        background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
+        .time-line {
+            width: 100%;
+        }
+        button {
+            padding: 12px;
+        }
+        input {
+            appearance: auto;
+            border: none;
+            height: 5px;
+            background-color: $gray;
+        }
+        div.controller-container {
+            @include flex(space-between);
+        }
+        div.controller-left {
+            @include flex();
+        }
+    }
+    div.video-controller.showing {
+        opacity: 1;
     }
 }
