🐛 Error fix : not loggedIn user click btn error

--- a/src/client/scss/components/_watch.scss
+++ b/src/client/scss/components/_watch.scss
@@ -24,6 +24,9 @@ section.watch-video {
                     padding: 0 8px;
                     button {
                         @include flex;
+                        a {
+                            @include flex;
+                        }
                         i {
                             padding: 6px;
                         }
