--- a/src/views/channel/channel.pug
+++ b/src/views/channel/channel.pug
@@ -15,7 +15,10 @@ block content
                             div
                                 small.subscribers #{showingChannel.subscribed}
                                 small  #{showingChannel.subscribed < 2 ? "subscriber" : "suscribers"}
-                    if channel && channel._id.valueOf() === id
+                    if !channel
+                        button(type="button") 
+                            a(href=`/login`) Subscribe
+                    else if channel._id.valueOf() === id
                         button(type="button")
                             a(href=`${showingChannel._id}/edit`) Edit Channel
                     else
