--- a/src/views/watch/watch.pug
+++ b/src/views/watch/watch.pug
@@ -38,7 +38,11 @@ block content
                         ul
                             li
                                 button.liked-button
-                                    if channel.liked.includes(video._id.valueOf())
+                                    if !channel
+                                        a(href="/login")
+                                            i.ic-liked
+                                            strong #{video.meta.liked}
+                                    else if channel.liked.includes(video._id.valueOf())
                                         i.ic-liked-fill
                                         strong #{video.meta.liked} 
                                     else
@@ -46,7 +50,11 @@ block content
                                         strong #{video.meta.liked === 0 ? 'like' : video.meta.liked}
                             li
                                 button.disliked-button
-                                    if channel.disliked.includes(video._id.valueOf())
+                                    if !channel
+                                        a(href="/login")
+                                            i.ic-disliked
+                                            strong #{video.meta.disliked}         
+                                    else if channel.disliked.includes(video._id.valueOf())
                                         i.ic-disliked-fill 
                                         strong #{video.meta.disliked} 
                                     else
@@ -54,8 +62,13 @@ block content
                                         strong #{video.meta.disliked === 0 ? 'dislike' : video.meta.disliked}
                             li
                                 button.save-button
-                                    i.ic-save
-                                    strong #{channel.library.includes(video._id.valueOf()) ? 'Unsave' : 'save'}
+                                    if !channel
+                                        a(href="/login")
+                                            i.ic-save
+                                            strong save
+                                    else
+                                        i.ic-save
+                                        strong #{channel.library.includes(video._id.valueOf()) ? 'Unsave' : 'save'}
         section.watch-channel
             header
                 div.channel-avatar-title
@@ -66,7 +79,10 @@ block content
                         small.subscribers #{video.channel.subscribed}
                         small  #{video.channel.subscribed < 2 ? "subscriber" : "subscribers" }
                 div.channel-subscription
-                    if channel && channel._id === video.channel._id.valueOf()
+                    if !channel
+                        button(type="button") 
+                            a(href=`/login`) Subscribe
+                    else if channel._id === video.channel._id.valueOf()
                         button(type="button") 
                             a(href=`/watch/${video._id}/edit`) Edit Video
                     else
@@ -75,6 +91,13 @@ block content
                 p #{video.description}
 
         //- comments
+        section.watch-comment
+            if loggedIn
+                +avatar-noanchor(channel)
+                form(method="POST")
+                    textarea(name="comment", placeholder="Add a public comment...", required)
+                    button(type="button") Cancel
+                    button(type="submit") Comment
 block scripts
     script(src="/assets/statics/js/watch_videoController.js") 
     script(src="/assets/statics/js/channel_subscribe.js")
