--- a/src/views/channel/join.pug
+++ b/src/views/channel/join.pug
@@ -30,7 +30,7 @@ block content
                     div.join-avatar
                         h3
                             label(for="avatar") Avatar
-                        img(src="/uploads/avatars/Default Avatar.png").avatar
+                        img(src="/assets/images/Default Avatar.png").avatar
                         input(type="file", name="avatar", accept="image/*", id="avatar").input-avatar
                     div.join-description
                         h3
