--- a/src/views/watch/watch.pug
+++ b/src/views/watch/watch.pug
@@ -6,7 +6,7 @@ block content
     article.watch
         section.watch-video
             div.video-player
-                video(src=`/${video.videoUrl}`)
+                video(src=`${video.videoUrl}`)
                 div.video-controller
                     input(type="range", step="0.05", value="0", min="0").time-line
                     div.controller-container
