--- a/src/views/base/partials/nav.pug
+++ b/src/views/base/partials/nav.pug
@@ -24,12 +24,12 @@ nav
                 //- i.ic-library-fill
                 span Library
         li
-            a(href="#")
+            a(href="/feed/yourVideo")
                 i.ic-your-videos
                 //- i.ic-your-videos-fill
                 span Your Videos
         li
-            a(href="#")
+            a(href="/feed/liked")
                 i.ic-liked
                 //- i.ic-liked-fill
                 span liked Videos
