--- a/src/views/feed/explore.pug
+++ b/src/views/feed/explore.pug
@@ -2,4 +2,5 @@ extends ../base/layout
 include ../base/mixins/video
 
 block content
-    +video(videos)
+    section.video-grid
+        +video-vertical(videos)
