--- a/src/views/feed/subscriptions.pug
+++ b/src/views/feed/subscriptions.pug
@@ -2,5 +2,6 @@ extends ../base/layout
 include ../base/mixins/video
 
 block content
-    +video(videos)
+    section.video-grid
+        +video(videos)
     
