--- a/src/client/scss/modules/_video-grid.scss
+++ b/src/client/scss/modules/_video-grid.scss
@@ -4,7 +4,7 @@ section.video-grid {
 }
 
 .video-mixin {
-    width: 100%;
+    padding: 0 10%;
     @include flex(flex-start, flex-start);
     flex-wrap: wrap;
     li {
@@ -31,7 +31,7 @@ section.video-grid {
 
             div.video-data {
                 @include flex(flex-start, flex-start);
-                padding-top: 12px;
+                padding-top: 16px;
                 position: relative;
 
                 img {
@@ -40,11 +40,63 @@ section.video-grid {
                 }
 
                 div.video-data-text {
+                    h3 {
+                        margin-bottom: 6px;
+                        font-size: 15px;
+                    }
                     div.video-data-text-meta {
                         color: $gray;
+                        div {
+                            @include flex(flex-start flex-start);
+                            small {
+                                font-size: 12px;
+                            }
+                        }
                     }
                 }
             }
         }
+    }
+}
+
+.video-mixin.horizontal {
+    li {
+        max-width: 300px;
+        min-width: 210px;
+    }
+}
+
+.video-mixin.vertical {
+    @include flex-column(flex-start, center);
+    li {
+        width: 100%;
+        max-width: 860px;
+        min-width: 482px;
+        padding-left: 16px;
+        padding-right: 16px;
+        overflow: hidden;
+        z-index: -1;
+        flex-grow: 1;
+    }
+    .thumb.vertical {
+        min-width: 200px;
+        margin-right: 16px;
+        padding-top: calc(40% / 16 * 9);
+        img {
+            width: 100%;
+        }
+    }
+    div.video-data {
+        width: 160%;
+    }
+    h3 {
+        font-size: 20px;
+    }
+    a {
+        @include flex(flex-start, flex-start);
+    }
+    p {
+        font-size: 12px;
+        margin-top: 8px;
     }
 }
