--- a/src/views/channel/channel.pug
+++ b/src/views/channel/channel.pug
@@ -41,7 +41,7 @@ block content
         ul.channel-info-list
             li.list
                 strong  Uploads ▶
-                div    
+                div.channel-uploads
                     if(showingChannel.videos)
                         +video(showingChannel.videos)
                     else
